--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=B-MedApp
+
+# URL de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/MedApp?useSSL=false&serverTimezone=UTC
+
+# Nombre de usuario de la base de datos
+spring.datasource.username=root
+
+# Contraseña de la base de datos
+spring.datasource.password=
+
+# Driver de la base de datos
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Dialecto de Hibernate para MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.properties.hibernate.format_sql=true
+
+# Mostrar las consultas SQL
+spring.jpa.show-sql=true
+
+# Habilitar la creación y actualización automática de tablas
+#spring.jpa.hibernate.ddl-auto=update
