ADD Packages for Auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Mostrar las consultas SQL
 spring.jpa.show-sql=true
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
 # Habilitar la creación y actualización automática de tablas
 #spring.jpa.hibernate.ddl-auto=update
